@@ -20,8 +20,11 @@
 # $Id$
 # -----------------------------------------------------------------------------
 
-org.apache.batik.ext.awt.image.codec.png.PNGRegistryEntry
-org.apache.batik.ext.awt.image.codec.tiff.TIFFRegistryEntry
+# NOTE: the "codec" package is deprecated, there entries are kept here for compatibility with older JVM versions
+# (uses "sun.image", which is only supported in Sun Java implementations and was retired in JDK 7)
+#org.apache.batik.ext.awt.image.codec.png.PNGRegistryEntry
+#org.apache.batik.ext.awt.image.codec.tiff.TIFFRegistryEntry
+
 org.apache.batik.ext.awt.image.codec.imageio.ImageIOJPEGRegistryEntry
-#org.apache.batik.ext.awt.image.codec.imageio.ImageIOPNGRegistryEntry
-#org.apache.batik.ext.awt.image.codec.imageio.ImageIOTIFFRegistryEntry
+org.apache.batik.ext.awt.image.codec.imageio.ImageIOPNGRegistryEntry
+org.apache.batik.ext.awt.image.codec.imageio.ImageIOTIFFRegistryEntry
